fix lab3 of anna orlova