@@ -3,24 +3,22 @@ package org.example;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.Map;
-import java.util.LinkedHashMap;
+import java.util.HashMap;
 import java.util.List;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 public class TextStatistics {
     private final Collection<String> text;
 
-    public TextStatistics(Supplier<Collection<String>> supplier, List<String> storage) {
-        text = supplier.get();
-        text.addAll(storage);
+    public TextStatistics(Collection<String> text) {
+        this.text = text;
     }
 
     // список уникальных слов в тексте
     public List<String> getUniqueWords() {
         return text.stream()
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // список самых длинных слов с частотой их использования
@@ -30,7 +28,7 @@ public class TextStatistics {
                 .entrySet()
                 .stream()
                 .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (e1, e2) -> e2, LinkedHashMap::new));
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (e1, e2) -> e2, HashMap::new));
     }
 
     // количество слов, которые содержат слово, введенное пользователем
